<resources>
    <string name="app_name">Believe</string>
    <string name="p01_1">「 意識，能夠影響客觀存在。」</string>
    <string name="p01_2">「 我相信什麼，什麼就會成為現實。」</string>
    <string name="p01_3">「 在醫學上有類似的理論，稱為安慰劑效應，指病人雖然獲得無效的治療，卻預料或相信治療有效，而讓病患症狀得到舒緩的現象。」</string>
    <string name="p01_4">「 而在心理學上，這稱為畢馬龍效應或期待效應。希臘神話裡一位名為畢馬龍的雕刻家，愛上了自己用象牙雕刻出來的女神雕像，開始每天對著雕像說話，最後那座雕像變成了一位真正的女神。」</string>
    <string name="p01_5">「 這是一個自我應驗預言發展。我相信未來的我會成功，未來就真的會向我所期待的方向發展。」</string>
    <string name="p01_6">「 不是我覺得，也不是我希望，而是因為我深.信.不.疑。」</string>
    <string name="p01_7">「 意識，能夠影響客觀存在。」</string>
    <string name="p01_8">「 他們將再次來到惡魔的跟前，你不怕嗎?」</string>

    <string name="p02_time">2020年7月22日 16:25  [墓園]</string>
    <string name="p02_1">一個陰雨的午後，你看著手裡盛開的雛菊，那是阿芙拉生前最喜歡的花。2020年7月22日，今天是阿芙拉第八年的忌日。</string>
    <string name="p02_2">你注意到身旁站著的一位俊俏的白人，Agernon.James(艾傑農.詹姆斯)，身高不高，體格尚可，雖然早就習慣他那張英挺的臉，你還是十分訝異自己二十年來居然沒喜歡上這麼帥的傢伙。</string>
    <string name="p02_3">艾傑農顯然沒有發現自己正在被注視著，他一臉黯淡，穿著素雅的黑色晨禮服，搭配白色口袋巾、黑色西裝背心、深灰色長褲，就上墳來說好像有點太過正式，與平時幽默又胡鬧的他格格不入。</string>
    <string name="p02_4">墓碑上刻著「Afra.Scherbatsky(阿芙拉.榭巴斯基)在此長眠」幾個大字。墓碑上放著一張照片，你把雛菊放在墓前，拿起那張照片。</string>
    <string name="p02_5">那是八年前你們三個人一起去湖邊潛水的合照，照片中的阿芙拉身穿淺粉紅短版背心，戴著艾傑農的漁夫帽擺出俏皮的姿勢，一頭不乖的短髮藏在帽緣下，加拿大裔，金髮藍眼睛、挺拔的五官、白皙的皮膚，相信在天國一定也是個萬人迷吧。你還記得潛水那天太陽很烈，三個人都堅持不擦防曬，一股腦栽進水裡玩耍了一整天，還打賭曬傷的人回去要請吃飯，結果三個人都曬傷，硬生生脫了一層皮。想到這裡你不禁笑了出聲。</string>
    <string name="p02_6">遠遠地，你注意到有位同樣一身素雅黑西裝的男人朝你們走了過來。擦身而過的時候，你們對到了眼。</string>
    <string name="p02_7">此時，隨著天空一陣閃光，轟隆地一聲巨響狠狠刺穿你們每個人的耳膜，你們著實嚇得不輕，雨勢瞬間轉大了，你想起早上的氣象預報的確有提到午後可能會有大雷雨。</string>
    <string name="p02_8">艾傑農:「 不如去我們三個高中常去的那間餐廳吃個飯吧?自從阿芙拉過世後我們就很少去了。 兄弟，要一起來嗎?」</string>


    <string name="p03_time">2020年7月22日 18:34  [餐廳]</string>
    <string name="p03_0">你們走進餐廳，經典的美式牛排館，懷念的氣味撲鼻，昔日的感覺都回來了，你都快忘了自己高中時有奪愛吃這間的招牌紐約客牛排。</string>
    <string name="p03_1">「當年我們的專屬座位。」艾傑農望向角落一張四人桌的位置，那裡現在正坐著一位黑人，面向牆壁，桌上空空如也。</string>
    <string name="p03_2">「可惜那邊有人坐了。你還記得阿芙拉的牛排墜落事件嗎?」艾傑農露出苦笑。</string>
    <string name="p03_3">你想起阿芙拉有次手殘整塊牛排飛到別人座位。</string>
    <string name="p03_4">你們三個隨意找了個位置坐了下來，點了餐，愉快地談天著。</string>
    <string name="p03_5">此時迎面走來一位棕髮女孩，綁著馬尾，你與艾傑農訝異地瞪大雙眼，她那雙深邃的藍色瞳孔像極了阿芙拉，不過你們很快發現她的其他特徵比當年的阿芙拉成熟了太多。女孩靠近了你們，眼神先是閃出了一絲訝異，接著皺了皺眉。而下一秒她看到了P2，露出更驚訝的神情。
</string>
    <string name="p03_6">「 泰德!!你在這幹嘛?我打電話你都不接是怎樣?蛤蛤蛤是怎樣你給我講清楚!阿話說，你怎麼突然換新髮型沒跟我說?太畸形了八我快笑死，你活像顆花椰菜你知道嗎。阿，這是你朋友啊?」</string>
    <string name="p03_7">P2一頭霧水，眼前這個女孩他連看都沒看過。</string>
    <string name="p03_8">「安安你們好，我是阿爾貝拉，是泰德的好朋友，你們呢?」阿爾貝拉露出大方的笑容。</string>
    <string name="p03_9">阿爾貝拉一臉狐疑。</string>
    <string name="p03_10">忽然你們聽到一聲尖叫，回頭一看，角落數來第二桌的服務生拿了一把鋒利的牛排刀，插進那位客人的眼窩，刺穿後腦勺，拔了又刺，刺了又拔，桌巾迅速染成了鮮紅色。坐在附近的客人顯然被恐懼吞沒，開始四處竄逃，而你突然覺得好像哪裡怪怪的。接下來，不只是那位服務生，越來越多的人開始攻擊其他人，尖叫聲此起彼落，原本縈繞著花草香及爵士樂的天堂瞬間變成充滿鐵腥味的人間煉獄。</string>
    <string name="p03_11">「怎樣是怎樣是怎樣老天爺大家怎麼突然發瘋啊?!!?」阿爾貝拉顫抖的聲音將驚魂未定的你們拉回了現實。</string>
    <string name="p03_12">「去我家吧!!我家就在附近，走路就能到!!」艾傑農大聲提議。</string>
    <string name="p03_13">於是你們趁亂奔向廚房倒垃圾的後門，迅速離開了餐廳，沿著小路一路逃跑。</string>


    <string name="p10_time">2020年7月25日 18:34  [海邊]</string>
    <string name="p10_1">「 平行世界是存在的。」</string>
    <string name="p10_2">「 一個事件不同的過程或一個不同的決定的後續發展是存在於不同的平行宇宙中的。」</string>
    <string name="p10_3">晚霞穿過紅霧射入海面，一韻一波，今夜的海很美。</string>
    <string name="p10_4">灘上一片寂靜，海岸延伸處的盡頭站了一個人，白色的浪花拍打著。</string>
    <string name="p10_5">「 在醫學上，有安慰劑效應；在心理學上，有畢馬龍效應，那在量子力學上呢?」</string>
    <string name="p10_5_1">「 當你相信a事件會發生，而我相信a事件不會發生，那究竟這件事會不會發生呢?」</string>
    <string name="p10_5_2">「 在你的宇宙裡，a事件確實發生了，在我的宇宙裡則不然。」</string>
    <string name="p10_6">這個人身高不高，體格尚可，白人。</string>
    <string name="p10_7">「 我相信什麼，什麼就會成為現實。」</string>
    <string name="p10_8">「 真的是他.....Max!!是你嗎??」</string>
    <string name="p10_9">「 在我的宇宙裡，我相信阿爾貝拉與夏洛特還活著。」</string>
    <string name="p10_10">「 回答我!!! Max!!!!」</string>
    <string name="p10_11">「 不是我希望，也不是我覺得，而是我深信不疑。」</string>
    <string name="p10_12">他轉身望向了聲音的源頭。</string>
    <string name="p10_13">「 因為相信，兩條線才能交會。」</string>
    <string name="p10_14">他的眼神悲傷卻堅定無比。</string>
    <string name="p10_15">「 我的獠牙已經對準了喉嚨，你再一次將他們拉入了地獄。」</string>
    <string name="p10_16">「 Max??」</string>
    <string name="p10_17">「 他們這次會戰勝你的。」</string>
    <string name="p10_18">「 那可不一定。」</string>

</resources>
