<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CemeteryActivity.CemeteryActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_begining_describe"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/p01_1"
        android:textColor="@color/blue"
        android:gravity="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/p02_time"
        android:textColor="@color/white"
        android:gravity="center"
        android:visibility="invisible"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_backpack"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/button_style"
        android:textColor="@color/mainColor"
        android:text="背包"
        android:visibility="invisible"

        app:layout_constraintTop_toTopOf="@id/imgv_cemetery"
        app:layout_constraintEnd_toEndOf="@id/tv_p2_story"/>


    <ImageView
        android:id="@+id/imgv_cemetery"
        android:layout_width="450dp"
        android:layout_height="match_parent"
        android:background="@drawable/shape_content"
        android:src="@drawable/cemetery"
        android:padding="15dp"
        android:layout_margin="30dp"
        android:scaleType="fitXY"
        android:visibility="invisible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id="@+id/tv_p2_story"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/p02_1"
        android:textColor="@color/mainColor"

        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.95"
        />
    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Next"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />
    <ImageView
        android:id="@+id/imgv_p02_arrow"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_arrow_right"
        android:visibility="invisible"

        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_next"
        app:layout_constraintBottom_toBottomOf="@id/tv_next"
        />




</androidx.constraintlayout.widget.ConstraintLayout>